integ-tests/tests/snapshots/parser__bad_table_names__period.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[wanted]: 
  ┌─ period:1:2
  │
1 │ [.]
  │  ^^^ expected a table key


